# mplot-rs

./: Cargo.toml  README.md
examples/: auc_boxplot.rs  bar_histogram.rs  boxplot_linear.rs  boxplot_log.rs  fit_boxplot.rs  gallery.rs  gridspec_layout.rs  legend_lines.rs  line_log_x.rs  line_panel.rs  simple_line.rs  subplot_lines.rs  timeseries_grid.rs
scripts/: mpl_reference.py
src/: as_vector.rs  auxiliary.rs  boxplot.rs  color.rs  colormap.rs  constants.rs  curve.rs  error.rs  figure.rs  graph.rs  gridspec.rs  lib.rs  panel.rs  plot.rs  series.rs
src/axes/: mod.rs
src/compile/: mod.rs
src/render/: canvas.rs  export.rs  layout.rs  legend.rs  mod.rs  model.rs  mpl_style.rs  pdf.rs  png.rs  primitives.rs  scene.rs  svg.rs  ticks.rs
src/scale/: mod.rs
tests/: fidelity.rs  integration.rs
