[package]
name = "mplot"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native Rust plotting library with a plotpy-compatible API"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["plot", "2D", "matplotlib", "plotpy"]

[dependencies]
num-traits = "0.2"
plotters = { version = "0.3", default-features = true, features = ["ttf"] }

[dev-dependencies]
approx = "0.5"
image = "0.25"

[[example]]
name = "simple_line"
path = "examples/simple_line.rs"

[[example]]
name = "subplot_lines"
path = "examples/subplot_lines.rs"

[[example]]
name = "boxplot_linear"
path = "examples/boxplot_linear.rs"

[[example]]
name = "boxplot_log"
path = "examples/boxplot_log.rs"

[[example]]
name = "gallery"
path = "examples/gallery.rs"
