[package]
name = "mplot"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
categories = ["mathematics", "science"]
description = "Native Rust 2D plotting with matplotlib-inspired rendering fidelity"
keywords = ["plot", "2D", "matplotlib", "visualization"]

[dependencies]
num-traits = "0.2"
plotters = { version = "0.3", default-features = true, features = ["ttf"] }
svg2pdf = { version = "0.13", default-features = true }

[dev-dependencies]
approx = "0.5"
image = "0.25"

[[example]]
name = "legend_lines"
path = "examples/legend_lines.rs"

[[example]]
name = "line_panel"
path = "examples/line_panel.rs"

[[example]]
name = "simple_line"
path = "examples/simple_line.rs"

[[example]]
name = "subplot_lines"
path = "examples/subplot_lines.rs"

[[example]]
name = "boxplot_linear"
path = "examples/boxplot_linear.rs"

[[example]]
name = "boxplot_log"
path = "examples/boxplot_log.rs"

[[example]]
name = "gallery"
path = "examples/gallery.rs"

[[example]]
name = "bar_histogram"
path = "examples/bar_histogram.rs"

[[example]]
name = "gridspec_layout"
path = "examples/gridspec_layout.rs"

[[example]]
name = "line_log_x"
path = "examples/line_log_x.rs"
